--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "functions/server.js",
   "scripts": {
     "build": "netlify-lambda build express",
-    "start": "nodemon server-local.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
